# prompt-dialog

./: AGENTS.md  Cargo.toml  README.md  SRS.md  build.rs
docs/: SRS.md  drop-shadow.md  fonts.md  risks.md  testing.md
src/: main.rs
src/server/: client.rs  discovery.rs  mod.rs
ui/: prompt-dialog.slint
