[package]
name = "prompt-dialog"
version = "0.1.0"
edition = "2021"
description = "Frameless AI prompt dialog for OpenCode"
license = "MIT"
build = "build.rs"

[dependencies]
slint = { version = "1.15", features = ["backend-winit"] }
i-slint-backend-winit = "=1.15.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arboard = "3.6.1"

[build-dependencies]
slint-build = "1.15"

[profile.release]
lto = true
strip = true
